# thunar-torrent-property

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
ext/: PKGBUILD  makedeb-libtorrent-rasterbar.sh
src/: torrent-info.cpp  torrent-info.h  torrent-page.c  torrent-page.h  torrent-property-plugin.c  torrent-provider.c  torrent-provider.h
src/ui/: files.c  header.c  trackers.c
src/utils/: fs.c  fs.h  human-size.c  human-size.h
src/wrappers/: torrent-info.cpp  torrent-info.h  torrent-status.cpp  torrent-status.h
